@@ -5,10 +5,10 @@ WP.............
 W$WWWWWWWWWWWW.      -
 W            ^.
 WWWWWWWWWWWWWW.  .
-             W...M...
+             W...M...    B
              WWWWWWWK.
                    WW.
                     W.       W$
-                    WR.......4E
+                    WR...4...4E
                     WWWWWWWWWWW
 ;
