@@ -7,6 +7,7 @@ VERSION 1.002:
    bug kill.
  - Ending the mainloop now displays a "quit message" (with the exception of
    end-of-games caused by a SystemExit).
+ - New "bat" enemy added.
 
 Changes between Orange Guy's Quest version 1.0 and 1.1:
 
